kubernetes/apps/flux-system/flux-operator/networkpolicys/notification-controller/flux-system-notification-controller-allow-eg-to-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flux-system-notification-controller-allow-eg-to-alertmanager
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: notification-controller
  policyTypes:
    - egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: alertmanager
      ports:
        - protocol: TCP
          port: 9093
